--- a/gallery.html
+++ b/gallery.html
@@ -122,8 +122,8 @@
                 <div class="col">
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-1.JPG">
-                                <img class="fidha" src="./img/gallery/img-1.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-1.webp">
+                                <img class="fidha" src="./img/gallery/img-1.webp"  alt="" />
                               </a>
                               
 
@@ -135,8 +135,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-2.JPG">
-                                <img class="fidha" src="./img/gallery/img-2.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-2.webp">
+                                <img class="fidha" src="./img/gallery/img-12.webp"  alt="" />
                               </a>
 
                         </div>
@@ -146,8 +146,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-3.JPG">
-                                <img class="fidha" src="./img/gallery/img-3.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-3.webp">
+                                <img class="fidha" src="./img/gallery/img-3.webp"  alt="" />
                               </a>
 
                         </div>
@@ -157,20 +157,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-4.JPG">
-                                <img class="fidha" src="./img/gallery/img-4.JPG"  alt="" />
-                              </a>
-
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col">   
-                    <div class="card shadow-sm">
-                        <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-5.JPG">
-                                <img class="fidha" src="./img/gallery/img-5.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-4.webp">
+                                <img class="fidha" src="./img/gallery/img-4.webp"  alt="" />
                               </a>
 
 
@@ -181,8 +169,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-6.JPG">
-                                <img class="fidha" src="./img/gallery/img-6.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-5.webp">
+                                <img class="fidha" src="./img/gallery/img-5.webp"  alt="" />
                               </a>
 
 
@@ -193,8 +181,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-8.JPG">
-                                <img class="fidha" src="./img/gallery/img-8.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-6.webp">
+                                <img class="fidha" src="./img/gallery/img-6.webp"  alt="" />
                               </a>
 
 
@@ -205,8 +193,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-10.JPG">
-                                <img class="fidha" src="./img/gallery/img-10.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-8.webp">
+                                <img class="fidha" src="./img/gallery/img-8.webp"  alt="" />
                               </a>
 
 
@@ -217,8 +205,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-9.JPG">
-                                <img class="fidha" src="./img/gallery/img-9.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-10.webp">
+                                <img class="fidha" src="./img/gallery/img-10.webp"  alt="" />
                               </a>
 
 
@@ -229,8 +217,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-11.JPG">
-                                <img class="fidha" src="./img/gallery/img-11.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-9.webp">
+                                <img class="fidha" src="./img/gallery/img-9.webp"  alt="" />
                               </a>
 
 
@@ -241,8 +229,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-12.JPG">
-                                <img class="fidha" src="./img/gallery/img-12.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-11.webp">
+                                <img class="fidha" src="./img/gallery/img-11.webp"  alt="" />
                               </a>
 
 
@@ -253,8 +241,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-13.JPG">
-                                <img class="fidha" src="./img/gallery/img-13.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-12.webp">
+                                <img class="fidha" src="./img/gallery/img-12.webp"  alt="" />
                               </a>
 
 
@@ -265,8 +253,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-14.JPG">
-                                <img class="fidha" src="./img/gallery/img-14.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-13.webp">
+                                <img class="fidha" src="./img/gallery/img-13.webp"  alt="" />
                               </a>
 
 
@@ -277,8 +265,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-16.JPG">
-                                <img class="fidha" src="./img/gallery/img-16.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-14.webp">
+                                <img class="fidha" src="./img/gallery/img-14.webp"  alt="" />
                               </a>
 
 
@@ -289,8 +277,8 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-15.JPG">
-                                <img class="fidha" src="./img/gallery/img-15.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-16.webp">
+                                <img class="fidha" src="./img/gallery/img-16.webp"  alt="" />
                               </a>
 
 
@@ -301,8 +289,20 @@
                 <div class="col">   
                     <div class="card shadow-sm">
                         <div class="card-image">
-                            <a data-fancybox="gallery" data-src="./img/gallery/img-15.JPG">
-                                <img class="fidha" src="./img/gallery/img-17.JPG"  alt="" />
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-15.webp">
+                                <img class="fidha" src="./img/gallery/img-15.webp"  alt="" />
+                              </a>
+
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col">   
+                    <div class="card shadow-sm">
+                        <div class="card-image">
+                            <a data-fancybox="gallery" data-src="./img/gallery/img-15.webp">
+                                <img class="fidha" src="./img/gallery/img-17.webp"  alt="" />
                               </a>
 
 
