--- a/index.html
+++ b/index.html
@@ -360,17 +360,17 @@
                 <div class="carousel-inner" style="object-fit: cover;">
 
                     <div class="carousel-item active ">
-                        <img src="./img/gallery/img-1.JPG" class="w-100 ">
+                        <img src="./img/gallery/img-1.webp" class="w-100 ">
 
                     </div>
 
                     <div class="carousel-item " data-bs-interval="2000">
-                        <img src="./img/gallery/img-3.JPG" class="w-100">
+                        <img src="./img/gallery/img-3.webp" class="w-100">
 
                     </div>
 
                     <div class="carousel-item ">
-                        <img src="./img/gallery/img-2.JPG" class="w-100">
+                        <img src="./img/gallery/img-2.webp" class="w-100">
 
                     </div>
 
